fix: flex gap on iOS Safari

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -31,6 +31,8 @@
   box-sizing: border-box;
   border-radius: 12px;
   padding: 15px;
+}
+.flagColorBoxFlex {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
